--- a/index.html
+++ b/index.html
@@ -122,5 +122,16 @@
         </div>
       </div>
     </aside>
+
+    <div class="c-home">
+      <div class="c-home__background"></div>
+      <div class="c-home__background-gradiant"></div>
+
+      <div class="c-home__content">
+        <h1 class="c-home__title">Welkom bij <span class="c-home__title--highlight">KlimApp</span></h1>
+        <p class="c-home__description">KlimApp is een platform waar je routes kan zien en delen met andere klimmers. Zo kan je samen met anderen klimmen en nieuwe routes ontdekken.</p>
+        <a href="#!" class="c-home__button">Bekijk Meer</a>
+      </div>
+    </div>
   </body>
 </html>
