--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header class="c-header">
       <div class="c-header__logo">
-        <h1 class="c-logo u-mb-clear">
+        <a href="index.html" class="c-logo u-mb-clear">
           <svg xmlns="http://www.w3.org/2000/svg" class="c-logo__symbol" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
             <defs>
               <style>
@@ -35,15 +35,13 @@
             </defs>
             <g id="a" class="a"><path class="b" d="M-955.584,341.472l-2.942-1.7v-5.662l4.91,2.71,4.91-2.71v5.662l-2.942,1.7a3.932,3.932,0,0,1-1.968.528A3.932,3.932,0,0,1-955.584,341.472Zm12.565-20.839a.848.848,0,0,0-1.272-.734l-9.318,5.257-9.332-5.257a.848.848,0,0,0-1.272.734v15.857l-1.819-1.05A3.939,3.939,0,0,1-968,332.033V319.967a3.939,3.939,0,0,1,1.968-3.408l10.448-6.031a3.933,3.933,0,0,1,3.936,0l10.448,6.031a3.938,3.938,0,0,1,1.968,3.408v12.065a3.938,3.938,0,0,1-1.968,3.408l-1.819,1.05Z" transform="translate(970 -310)" /></g>
           </svg>
-        </h1>
+        </a>
       </div>
       <div class="c-header__nav c-header__nav--main">
         <nav class="c-nav">
           <ul class="o-list c-nav__list u-mb-clear">
-            <li class="c-nav__item is-selected">
-              <a href="#!" class="c-nav__link">Home</a>
-            </li>
-            <li class="c-nav__item"><a href="#!" class="c-nav__link">Routes</a></li>
+            <li class="c-nav__item"><a href="index.html" class="c-nav__link">Home</a></li>
+            <li class="c-nav__item"><a href="routes.html" class="c-nav__link">Routes</a></li>
             <li class="c-nav__item"><a href="#!" class="c-nav__link">Ranglijst</a></li>
             <li class="c-nav__item"><a href="#!" class="c-nav__link">Tijdlijn</a></li>
           </ul>
@@ -101,8 +99,8 @@
         <div class="c-mobile-nav__nav c-mobile-nav__nav--main">
           <nav class="c-nav">
             <ul class="o-list c-nav__list">
-              <li class="c-nav__item"><a href="#!" class="c-nav__link">Home</a></li>
-              <li class="c-nav__item"><a href="#!" class="c-nav__link">Routes</a></li>
+              <li class="c-nav__item"><a href="index.html" class="c-nav__link">Home</a></li>
+              <li class="c-nav__item"><a href="routes.html" class="c-nav__link">Routes</a></li>
               <li class="c-nav__item"><a href="#!" class="c-nav__link">Ranglijst</a></li>
               <li class="c-nav__item"><a href="#!" class="c-nav__link">Tijdlijn</a></li>
             </ul>
