added routedetails + fixed to responivness

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
       <div class="c-home__background-man"></div>
 
       <div class="c-home__content">
-        <h1 class="c-home__title">Welkom bij <span class="c-home__title--highlight1">Klim</span><span class="c-home__title--highlight2">App</span></h1>
-        <p class="c-home__description">KlimApp is een platform waar je routes kan zien en delen met andere klimmers. Zo kan je samen met anderen klimmen en nieuwe routes ontdekken.</p>
+        <h1 class="c-home__title">Welkom bij <span class="c-home__title--highlight1">Mee</span><span class="c-home__title--highlight2">Climb</span></h1>
+        <p class="c-home__description">MeeClimb is een platform waar je routes kan zien en delen met andere klimmers. Zo kan je samen met anderen klimmen en nieuwe routes ontdekken.</p>
         <a href="#!" class="c-home__button">Bekijk Meer</a>
       </div>
     </div>
