--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
       <div class="c-header__nav c-header__nav--main">
         <nav class="c-nav">
           <ul class="o-list c-nav__list u-mb-clear">
-            <li class="c-nav__item"><a href="index.html" class="c-nav__link">Home</a></li>
+            <li class="c-nav__item"><a href="index.html" class="c-nav__link is-selected">Home</a></li>
             <li class="c-nav__item"><a href="routes.html" class="c-nav__link">Routes</a></li>
             <li class="c-nav__item"><a href="#!" class="c-nav__link">Ranglijst</a></li>
-            <li class="c-nav__item"><a href="#!" class="c-nav__link">Tijdlijn</a></li>
+            <li class="c-nav__item"><a href="#!" class="c-nav__link">Community</a></li>
           </ul>
         </nav>
       </div>
@@ -99,10 +99,10 @@
         <div class="c-mobile-nav__nav c-mobile-nav__nav--main">
           <nav class="c-nav">
             <ul class="o-list c-nav__list">
-              <li class="c-nav__item"><a href="index.html" class="c-nav__link">Home</a></li>
+              <li class="c-nav__item"><a href="index.html" class="c-nav__link is-selected">Home</a></li>
               <li class="c-nav__item"><a href="routes.html" class="c-nav__link">Routes</a></li>
               <li class="c-nav__item"><a href="#!" class="c-nav__link">Ranglijst</a></li>
-              <li class="c-nav__item"><a href="#!" class="c-nav__link">Tijdlijn</a></li>
+              <li class="c-nav__item"><a href="#!" class="c-nav__link">Community</a></li>
             </ul>
           </nav>
         </div>
