--- a/touwDetail.html
+++ b/touwDetail.html
@@ -42,9 +42,9 @@
         <nav class="c-nav">
           <ul class="o-list c-nav__list u-mb-clear">
             <li class="c-nav__item"><a href="index.html" class="c-nav__link">Home</a></li>
-            <li class="c-nav__item"><a href="routes.html" class="c-nav__link">Routes</a></li>
+            <li class="c-nav__item"><a href="routes.html" class="c-nav__link is-selected">Routes</a></li>
             <li class="c-nav__item"><a href="#!" class="c-nav__link">Ranglijst</a></li>
-            <li class="c-nav__item"><a href="#!" class="c-nav__link">Tijdlijn</a></li>
+            <li class="c-nav__item"><a href="#!" class="c-nav__link">Community</a></li>
           </ul>
         </nav>
       </div>
@@ -101,9 +101,9 @@
           <nav class="c-nav">
             <ul class="o-list c-nav__list">
               <li class="c-nav__item"><a href="index.html" class="c-nav__link">Home</a></li>
-              <li class="c-nav__item"><a href="routes.html" class="c-nav__link">Routes</a></li>
+              <li class="c-nav__item"><a href="routes.html" class="c-nav__link is-selected">Routes</a></li>
               <li class="c-nav__item"><a href="#!" class="c-nav__link">Ranglijst</a></li>
-              <li class="c-nav__item"><a href="#!" class="c-nav__link">Tijdlijn</a></li>
+              <li class="c-nav__item"><a href="#!" class="c-nav__link">Community</a></li>
             </ul>
           </nav>
         </div>
