added select option for routes

--- a/touwDetail.html
+++ b/touwDetail.html
@@ -23,18 +23,18 @@
           <svg xmlns="http://www.w3.org/2000/svg" class="c-logo__symbol" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
             <defs>
               <style>
-                .a {
+                .x {
                   clip-path: url(#b);
                 }
-                .b {
+                .y {
                   fill: #44c9f6;
                   stroke: rgba(0, 0, 0, 0);
                   stroke-miterlimit: 10;
                 }
               </style>
-              <clipPath id="b"><rect width="32" height="32" /></clipPath>
+              <clipPath id="x"><rect width="32" height="32" /></clipPath>
             </defs>
-            <g id="a" class="a"><path class="b" d="M-955.584,341.472l-2.942-1.7v-5.662l4.91,2.71,4.91-2.71v5.662l-2.942,1.7a3.932,3.932,0,0,1-1.968.528A3.932,3.932,0,0,1-955.584,341.472Zm12.565-20.839a.848.848,0,0,0-1.272-.734l-9.318,5.257-9.332-5.257a.848.848,0,0,0-1.272.734v15.857l-1.819-1.05A3.939,3.939,0,0,1-968,332.033V319.967a3.939,3.939,0,0,1,1.968-3.408l10.448-6.031a3.933,3.933,0,0,1,3.936,0l10.448,6.031a3.938,3.938,0,0,1,1.968,3.408v12.065a3.938,3.938,0,0,1-1.968,3.408l-1.819,1.05Z" transform="translate(970 -310)" /></g>
+            <g id="y" class="a"><path class="b" d="M-955.584,341.472l-2.942-1.7v-5.662l4.91,2.71,4.91-2.71v5.662l-2.942,1.7a3.932,3.932,0,0,1-1.968.528A3.932,3.932,0,0,1-955.584,341.472Zm12.565-20.839a.848.848,0,0,0-1.272-.734l-9.318,5.257-9.332-5.257a.848.848,0,0,0-1.272.734v15.857l-1.819-1.05A3.939,3.939,0,0,1-968,332.033V319.967a3.939,3.939,0,0,1,1.968-3.408l10.448-6.031a3.933,3.933,0,0,1,3.936,0l10.448,6.031a3.938,3.938,0,0,1,1.968,3.408v12.065a3.938,3.938,0,0,1-1.968,3.408l-1.819,1.05Z" transform="translate(970 -310)" /></g>
           </svg>
         </a>
       </div>
@@ -123,6 +123,58 @@
     </aside>
     <div class="c-detailRoute">
       <div class="c-wall js-wall"></div>
+      <div class="c-wall__options">
+        <div class="c-wall__routes">
+          <h3 class="c-wall__routes--title">Touw 1</h3>
+          <h6 class="c-wall__routes--subtitle">selecteer de route die u wilt zien</h6>
+          <div class="c-wall__routes--options">
+            <input class="o-hide-accessible c-options c-option--hidden js-path-select" type="radio" id="route1" name="routes" data-id="1" />
+            <label class="c-label c-label--options c-custom-options" for="route1">
+              <span class="u-mb-clear c-wall__rating--title">Route 1</span>
+              <span class="u-mb-clear c-wall__rating--subtitle">Niveu: <span>5B</span></span>
+              <span class="u-mb-s c-wall__rating--subtitle">Builder: <span>Some name :)</span></span>
+              <span class="u-mb-clear c-wall__rating--subtitle">Rating:</span>
+              <span class="c-wall__grid--item--grip--jug">
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star c-wall__star--fill" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star c-wall__star--fill" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star c-wall__star--fill" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
+              </span>
+            </label>
+            <input class="o-hide-accessible c-options c-option--hidden js-path-select" type="radio" id="route2" name="routes" data-id="2" />
+            <label class="c-label c-label--options c-custom-options" for="route2">
+              <span class="u-mb-clear c-wall__rating--title">Route 2</span>
+              <span class="u-mb-clear c-wall__rating--subtitle">Niveu: <span>2A</span></span>
+              <span class="u-mb-s c-wall__rating--subtitle">Builder: <span>Some other name</span></span>
+              <span class="u-mb-clear c-wall__rating--subtitle">Rating:</span>
+              <span class="c-wall__grid--item--grip--jug">
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star c-wall__star--fill" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star c-wall__star--fill" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star c-wall__star--fill" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
+              </span>
+            </label>
+            <input class="o-hide-accessible c-options c-option--hidden js-path-select" type="radio" id="route3" name="routes" data-id="3" />
+            <label class="c-label c-label--options c-custom-options" for="route3">
+              <span class="u-mb-clear c-wall__rating--title">Route 3</span>
+              <span class="u-mb-clear c-wall__rating--subtitle">Niveu: <span>5C</span></span>
+              <span class="u-mb-s c-wall__rating--subtitle">Builder: <span>And an other name</span></span>
+              <span class="u-mb-clear c-wall__rating--subtitle">Rating:</span>
+              <span class="c-wall__grid--item--grip--jug">
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star c-wall__star--fill" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star c-wall__star--fill" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star c-wall__star--fill" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
+              </span>
+            </label>
+          </div>
+          <a href="routes.html" class="c-wall__routes--goback">Ga terug</a>
+        </div>
+        <div class="c-wall__from"></div>
+      </div>
     </div>
   </body>
 </html>
