--- a/touwDetail.html
+++ b/touwDetail.html
@@ -138,7 +138,7 @@
           <h6 class="c-wall__routes--subtitle">selecteer de route die u wilt zien</h6>
           <div class="c-wall__routes--options js-wall_route--options">
             <input class="o-hide-accessible c-options c-option--hidden js-path-select" type="radio"
-              id="route1" name="routes" data-id="1" /><label
+              id="route1" name="routes" data-id="1" checked /><label
               class="c-label c-label--options c-custom-options" for="route1"><span
                 class="u-mb-clear c-wall__rating--title">Route 1</span><span
                 class="u-mb-clear c-wall__rating--subtitle">Niveu: <span>5B</span></span><span
