--- a/touwDetail.html
+++ b/touwDetail.html
@@ -141,6 +141,7 @@
           </div>
           <a href="routes.html" class="c-wall__routes--goback">Ga terug</a>
         </div>
+        <!-- only show this when logged in
         <div class="c-wall__from">
           <div class="c-commend__add" title="je moet ingelogd zijn om comments achter te laten" aria-disabled="TFrue">
             <label for="cocmment">Voeg een comment toe:</label><textarea name="comment" id="comment" class="c-comment__area" rows="4" placeholder="Wat vind u van deze route?"></textarea>
@@ -186,6 +187,7 @@
             </div>
           </div>
         </div>
+        -->
       </div>
     </div>
   </body>
