--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         <nav class="c-nav c-nav--meta">
           <ul class="o-list c-nav__list u-mb-clear">
             <li class="c-nav__item">
-              <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=KlimApp" class="c-nav__link">Login</a>
+              <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Home" class="c-nav__link">Login</a>
             </li>
             <li class="c-nav__item">
-              <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=KlimApp" class="c-nav__link c-nav__link--meta">Registreer</a>
+              <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Home" class="c-nav__link c-nav__link--meta">Registreer</a>
             </li>
           </ul>
         </nav>
@@ -121,10 +121,10 @@
           <nav class="c-nav c-nav--meta">
             <ul class="o-list c-nav__list">
               <li class="c-nav__item">
-                <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=KlimApp" class="c-nav__link">Login</a>
+                <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Home" class="c-nav__link">Login</a>
               </li>
               <li class="c-nav__item">
-                <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=KlimApp" class="c-nav__link">Registreer</a>
+                <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Home" class="c-nav__link">Registreer</a>
               </li>
             </ul>
           </nav>
