--- a/routes.html
+++ b/routes.html
@@ -16,7 +16,7 @@
     <script src="js/app.js"></script>
   </head>
 
-  <body>
+  <body id="ropes">
     <header class="c-header">
       <div class="c-header__logo">
         <a href="index.html" class="c-logo u-mb-clear">
@@ -57,10 +57,10 @@
         <nav class="c-nav c-nav--meta">
           <ul class="o-list c-nav__list u-mb-clear">
             <li class="c-nav__item">
-              <a href="#!" class="c-nav__link">Login</a>
+              <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Rope" class="c-nav__link">Login</a>
             </li>
             <li class="c-nav__item">
-              <a href="#!" class="c-nav__link c-nav__link--meta">Registreer</a>
+              <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Rope" class="c-nav__link c-nav__link--meta">Registreer</a>
             </li>
           </ul>
         </nav>
@@ -121,10 +121,10 @@
           <nav class="c-nav c-nav--meta">
             <ul class="o-list c-nav__list">
               <li class="c-nav__item">
-                <a href="#!" class="c-nav__link">Login</a>
+                <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Rope" class="c-nav__link">Login</a>
               </li>
               <li class="c-nav__item">
-                <a href="#!" class="c-nav__link">Registreer</a>
+                <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Rope" class="c-nav__link">Registreer</a>
               </li>
             </ul>
           </nav>
@@ -144,7 +144,7 @@
         <div class="c-touw__backgouround c-touw__backgouround-2"></div>
         <div class="c-touw__content">
           <h1 class="c-touw__content--title">Touw 2</h1>
-          <a href="touwDetail.html?touw=1" class="c-touw__content--button">Bekijk routes</a>
+          <a href="touwDetail.html?touw=2" class="c-touw__content--button">Bekijk routes</a>
         </div>
       </div>
     </section>
