--- a/dashboard.html
+++ b/dashboard.html
@@ -15,7 +15,7 @@
 
     <script src="js/app.js"></script>
   </head>
-  <body>
+  <body id="dashboard">
     <div class="c-app">
       <div class="c-app__logo">
         <img src="img/mctLogo.svg" alt="Logo" class="c-logo" />
@@ -37,7 +37,5 @@
       <div class="c-app__sidebar"></div>
       <div class="c-app__main"></div>
     </div>
-
-    
   </body>
 </html>
