--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <div class="c-home__content">
         <h1 class="c-home__title">Welkom bij <span class="c-home__title--highlight1">Mee</span><span class="c-home__title--highlight2">Climb</span></h1>
         <p class="c-home__description">MeeClimb is een platform waar je routes kan zien en delen met andere klimmers. Zo kan je samen met anderen klimmen en nieuwe routes ontdekken.</p>
-        <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=KlimApp" class="c-home__button">Bekijk Meer</a>
+        <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Home" class="c-home__button">Bekijk Meer</a>
       </div>
     </div>
   </body>
