--- a/dashboard.html
+++ b/dashboard.html
@@ -16,26 +16,38 @@
     <script src="js/app.js"></script>
   </head>
   <body id="dashboard">
-    <div class="c-app">
-      <div class="c-app__logo">
-        <img src="img/mctLogo.svg" alt="Logo" class="c-logo" />
+    <div class="c-dashboard">
+      <div class="c-dashboard__logo">
+        <a href="index.html" class="c-db-logo">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="c-db-logo__symbol" width="32" height="32" viewBox="0 0 32 32">
+            <defs>
+              <style>
+                .a {
+                  clip-path: url(#b);
+                }
+                .b {
+                  fill: #44c9f6;
+                  stroke: rgba(0, 0, 0, 0);
+                  stroke-miterlimit: 10;
+                }
+              </style>
+              <clipPath id="b"><rect width="32" height="32" /></clipPath>
+            </defs>
+            <g id="a" class="a"><path class="b" d="M-955.584,341.472l-2.942-1.7v-5.662l4.91,2.71,4.91-2.71v5.662l-2.942,1.7a3.932,3.932,0,0,1-1.968.528A3.932,3.932,0,0,1-955.584,341.472Zm12.565-20.839a.848.848,0,0,0-1.272-.734l-9.318,5.257-9.332-5.257a.848.848,0,0,0-1.272.734v15.857l-1.819-1.05A3.939,3.939,0,0,1-968,332.033V319.967a3.939,3.939,0,0,1,1.968-3.408l10.448-6.031a3.933,3.933,0,0,1,3.936,0l10.448,6.031a3.938,3.938,0,0,1,1.968,3.408v12.065a3.938,3.938,0,0,1-1.968,3.408l-1.819,1.05Z" transform="translate(970 -310)" /></g>
+          </svg>
+        </a>
       </div>
-      <div class="c-app__topbar">
-        <div class="c-topbar">
-          <p class="c-topbar__title">Klim-Muur WebApp Dashboard</p>
-          <div class="c-topbar__user">
-            <a href="" class="c-topbar__bell">
-              <svg xmlns="http://www.w3.org/2000/svg" class="c-topbar-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
-                <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
-                <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
-              </svg>
-            </a>
-            <div class="c-topbar__photo"></div>
-          </div>
-        </div>
+      <div class="c-dashboard__topbar"></div>
+      <div class="c-dashboard__sidebar">
+        <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="route1" name="routes" data-id="1" checked />
+        <label class="c-db-label c-db-label--options c-db-custom-options" for="route1">
+          <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
+            <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+            <polyline points="9 22 9 12 15 12 15 22"></polyline>
+          </svg>
+        </label>
       </div>
-      <div class="c-app__sidebar"></div>
-      <div class="c-app__main"></div>
+      <div class="c-dashboard__main"></div>
     </div>
   </body>
 </html>
