--- a/dashboard.html
+++ b/dashboard.html
@@ -36,26 +36,33 @@
             <g id="a" class="a"><path class="b" d="M-955.584,341.472l-2.942-1.7v-5.662l4.91,2.71,4.91-2.71v5.662l-2.942,1.7a3.932,3.932,0,0,1-1.968.528A3.932,3.932,0,0,1-955.584,341.472Zm12.565-20.839a.848.848,0,0,0-1.272-.734l-9.318,5.257-9.332-5.257a.848.848,0,0,0-1.272.734v15.857l-1.819-1.05A3.939,3.939,0,0,1-968,332.033V319.967a3.939,3.939,0,0,1,1.968-3.408l10.448-6.031a3.933,3.933,0,0,1,3.936,0l10.448,6.031a3.938,3.938,0,0,1,1.968,3.408v12.065a3.938,3.938,0,0,1-1.968,3.408l-1.819,1.05Z" transform="translate(970 -310)" /></g>
           </svg>
         </a>
+        <div class="c-header__mobile-nav-trigger">
+          <button class="o-button-reset c-nav-trigger js-toggle-nav u-mb-clear">
+            <svg class="c-nav-trigger__svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" />
+            </svg>
+          </button>
+        </div>
       </div>
       <div class="c-dashboard__topbar"></div>
       <div class="c-dashboard__sidebar">
         <div class="c-dasboard__sidebar--top">
           <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption1" name="navoption" />
-          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption1">
+          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption1" title="Ga terug naar de ander pagina's">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
               <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
               <polyline points="9 22 9 12 15 12 15 22"></polyline>
             </svg>
           </label>
           <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption2" name="navoption" />
-          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption2">
+          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption2" title="bewerk en toevoegen van touwen en/of routes">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit">
               <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
               <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
             </svg>
           </label>
           <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption3" name="navoption" />
-          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption3">
+          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption3" title="moderatie van social media berichten">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square">
               <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
             </svg>
@@ -76,7 +83,7 @@
             </svg>
           </label>
         </div>
-        <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption4" />
+        <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption4" value="logout" />
         <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption4">
           <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-out">
             <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
@@ -87,5 +94,80 @@
       </div>
       <div class="c-dashboard__main"></div>
     </div>
+
+    <aside class="c-db-mobile-nav">
+      <div class="c-db-mobile-nav__bg"></div>
+      <div class="c-db-mobile-nav__body">
+        <div class="c-db-mobile-nav__header">
+          <p class="c-logo u-mb-clear">
+            <button class="o-button-reset c-nav-trigger js-toggle-nav u-mb-clear">
+              <svg class="c-nav-trigger__svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
+              </svg>
+            </button>
+          </p>
+        </div>
+
+        <div class="c-db-mobile-nav__nav c-db-mobile-nav__nav--main">
+          <div class="c-dasboard__sidebar--top u-mb-xs">
+            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption1" name="navoption" />
+            <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption1">
+              <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
+                <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                <polyline points="9 22 9 12 15 12 15 22"></polyline>
+              </svg>
+            </label>
+            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption2" name="navoption" />
+            <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption2">
+              <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit">
+                <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
+                <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
+              </svg>
+            </label>
+            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption3" name="navoption" />
+            <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption3">
+              <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square">
+                <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+              </svg>
+            </label>
+            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption4" name="navoption" />
+            <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption4">
+              <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2">
+                <line x1="18" y1="20" x2="18" y2="10"></line>
+                <line x1="12" y1="20" x2="12" y2="4"></line>
+                <line x1="6" y1="20" x2="6" y2="14"></line>
+              </svg>
+            </label>
+            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption5" name="navoption" />
+            <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption5">
+              <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-settings">
+                <circle cx="12" cy="12" r="3"></circle>
+                <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
+              </svg>
+            </label>
+          </div>
+          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption4" value="logout" />
+          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption4">
+            <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-out">
+              <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+              <polyline points="16 17 21 12 16 7"></polyline>
+              <line x1="21" y1="12" x2="9" y2="12"></line>
+            </svg>
+          </label>
+        </div>
+      </div>
+      <div class="c-db-mobile-nav__nav">
+        <nav class="c-nav c-nav--meta">
+          <ul class="o-list c-nav__list">
+            <li class="c-nav__item">
+              <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Home" class="c-nav__link">Login</a>
+            </li>
+            <li class="c-nav__item">
+              <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Home" class="c-nav__link">Registreer</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </aside>
   </body>
 </html>
