added logged in profile top right icon

--- a/dashboard.html
+++ b/dashboard.html
@@ -44,7 +44,20 @@
           </button>
         </div>
       </div>
-      <div class="c-dashboard__topbar"></div>
+      <div class="c-dashboard__topbar">
+        <h1 class="c-db__topbar--title u-mb-clear">MeeClimb Dashboard</h1>
+        <div class="c-db__topbar__profile">
+          <div class="c-nav__profile">
+            <a href="#notifications" class="c-nav__notification has-notification">
+              <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
+                <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+                <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+              </svg>
+            </a>
+            <a href="profile.html" class="c-nav__profileimg"></a>
+          </div>
+        </div>
+      </div>
       <div class="c-dashboard__sidebar">
         <div class="c-dasboard__sidebar--top">
           <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption1" name="navoption" />
@@ -54,7 +67,7 @@
               <polyline points="9 22 9 12 15 12 15 22"></polyline>
             </svg>
           </label>
-          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption2" name="navoption" />
+          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption2" name="navoption" checked />
           <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption2" title="bewerk en toevoegen van touwen en/of routes">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit">
               <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
@@ -68,7 +81,7 @@
             </svg>
           </label>
           <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption4" name="navoption" />
-          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption4">
+          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption4" title="Statistieken van de muren">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2">
               <line x1="18" y1="20" x2="18" y2="10"></line>
               <line x1="12" y1="20" x2="12" y2="4"></line>
@@ -76,7 +89,7 @@
             </svg>
           </label>
           <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption5" name="navoption" />
-          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption5">
+          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption5" title="Setting voor moderation">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-settings">
               <circle cx="12" cy="12" r="3"></circle>
               <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
@@ -84,7 +97,7 @@
           </label>
         </div>
         <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption4" value="logout" />
-        <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption4">
+        <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption4" title="uitloggen">
           <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-out">
             <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
             <polyline points="16 17 21 12 16 7"></polyline>
