test account page

--- a/dashboard.html
+++ b/dashboard.html
@@ -105,7 +105,11 @@
           </svg>
         </label>
       </div>
-      <div class="c-dashboard__main"></div>
+      <div class="c-dashboard__main">
+        <div class="c-db-wall">
+          <div class="c-wall js-wall"></div>
+        </div>
+      </div>
     </div>
 
     <aside class="c-db-mobile-nav">
